2006-05-10  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_arch.m4: Exported OBJECT_MODE for AIX.

	* src/etc/munge.init.in: Changed query_pids ps format specifier
	  from "args" to "command" for OS X.  Replaced query_pids ps format
	  specifier for empty column headers (=) with "| tail +2" for OS X.

	* config/x_ac_arch.m4: Added support for AIX.

2006-05-09  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/Makefile.am: Created $(localstatedir)/log dir.

	* src/etc/munge.init.in: Renamed from src/etc/munge.init.
	  Added prefix, exec_prefix, sbindir, and sysconfdir.
	  Renamed ENABLE_RELOAD to SIGHUP_RELOAD.
	* configure.ac: Added src/etc/munge.init to AC_CONFIG_FILES.

	* src/etc/munge.init: Replaced use of "which" with query_exec (Tru64).

2006-05-08  Chris Dunlap  <cdunlap@llnl.gov>

	* configure.ac: Added X_AC_EXPAND_INSTALL_DIRS.
	* config/x_ac_expand_install_dirs.m4: Added.
	* src/libcommon/munge_defs.h: Updated MUNGE_SOCKET_NAME,
	  MUNGE_AUTH_PIPE_DIR, MUNGED_LOGFILE, MUNGED_RANDOM_SEED, and
	  MUNGED_SECRET_KEY to use the expanded install dir names in config.h.

2006-05-05  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init, src/etc/munge.sysconfig: Tweaked defs.

2006-05-04  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init: Added support for NICE & USER.
	  Changed ENABLE_SIGHUP_RELOAD to ENABLE_RELOAD.
	  Replaced use of "source" keyword with "." (AIX).
	* src/etc/munge.sysconfig: Added NICE & USER.  Updated comments.

	* src/etc/Makefile.am: Preserved existing config files on install.

	* munge.spec: Explicitly set localstatedir & sysconfdir for configure.
	* src/etc/Makefile.am: Added use of $(localstatedir) & $(sysconfdir).

	* munge.spec: Added "/var/*/*" to %files.
	* src/etc/Makefile.am: Removed use of $(sysconfdir).  Created dirs for
	  /etc/munge, /var/lib/munge, and /var/run/munge.
	* src/libcommon/munge_defs.h: Changed MUNGE_SOCKET_NAME.

2006-05-03  Chris Dunlap  <cdunlap@llnl.gov>
