@@ -1,3 +1,8 @@
+2006-05-11  Chris Dunlap  <cdunlap@llnl.gov>
+
+	* config/x_ac_arch.m4: Added error message if OBJECT_MODE is not
+	  exported to the shell for AIX.
+
 2006-05-10  Chris Dunlap  <cdunlap@llnl.gov>
 
 	* config/x_ac_arch.m4: Exported OBJECT_MODE for AIX.
